<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_add_sever"
            android:icon="@drawable/add_icon"
            android:title="@string/AddServer" />
        <item
            android:id="@+id/nav_vip"
            android:icon="@drawable/vip_icon2"
            android:title="@string/vip" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/feedback_icon"
            android:title="@string/feedback" />

    </group>
</menu>
