<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:label="@string/nav_header_title"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ragaban.l2m.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.ragaban.l2m.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_vip"
        android:name="com.ragaban.l2m.vip"
        android:label="@string/vip" />
    <fragment
        android:id="@+id/nav_add_sever"
        android:name="com.ragaban.l2m.AddServer"
        android:label="fragment_add_server"
        tools:layout="@layout/fragment_add_server" />
    <fragment
        android:id="@+id/nav_feedback"
        android:name="com.ragaban.l2m.Feedback"
        android:label="feedback" />
</navigation>