<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg"
    tools:context=".AddServer">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tittle_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_content"
            android:padding="15dp">

            <TextView
                android:id="@+id/layout_tittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ptsansnarrowbold"
                android:gravity="center"
                android:text="@string/vip_text"
                android:textColor="@color/orange"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_content"
                    android:padding="10dp"
                    android:text="@string/lineage_2_text"
                    android:textColor="@color/beg"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_content"
                    android:padding="10dp"
                    android:text="@string/text42342"
                    android:textColor="@color/beg"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_content"
                    android:padding="10dp"
                    android:text="@string/vip_text2365"
                    android:textColor="@color/beg"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_content"
                    android:padding="10dp"
                    android:text="@string/vip_text765"
                    android:textColor="@color/beg1"
                    android:textSize="12sp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/tittle_view2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/bg_content"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/layout_tittle2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ptsansnarrowbold"
                        android:gravity="center"
                        android:text="@string/text32452"
                        android:textColor="@color/orange"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/image_top_left"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_margin="3dp"
                                android:layout_weight="1"
                                android:src="@drawable/left_top" />

                            <ImageView

                                android:id="@+id/image_top_right"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_margin="3dp"
                                android:layout_weight="1"
                                android:src="@drawable/right_top"
                                android:contentDescription="@string/dfasf" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView

                                android:id="@+id/image_bottom_left"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_margin="3dp"
                                android:layout_weight="1"
                                android:src="@drawable/left_bottom" />

                            <ImageView

                                android:id="@+id/image_bottom_right"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_margin="3dp"
                                android:layout_weight="1"
                                android:src="@drawable/right_bottom" />
                        </LinearLayout>
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/image_logo"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:src="@drawable/icon_app3" />

                </LinearLayout>

                <TextView
                    android:layout_marginRight="25dp"
                    android:layout_gravity="right"
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_content"
                    android:padding="3dp"
                    android:text="НИЖНИЙ ПРАВЫЙ"
                    android:textColor="@color/beg"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@color/white"
                    android:padding="5dp"
                    android:text="@string/rek_bottom_right"
                    android:textSize="8sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="10dp"
                        android:padding="5dp"
                        android:background="@drawable/bg_content"
                        android:text="Копировать"
                        android:textColor="@color/beg1" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/bg_content"
                        android:padding="5dp"
                        android:text="Загрузить TXT файл"
                        android:textColor="@color/beg1" />
                </LinearLayout>


            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>